@@ -1,22 +1,18 @@
-# syntax=docker/dockerfile:experimental
-FROM maven:3-adoptopenjdk-11-openj9 as build
+FROM azul/zulu-openjdk-alpine:19-latest as build
 WORKDIR /workspace/app
-COPY pom.xml .
 COPY src src
-RUN --mount=type=cache,target=/root/.m2 mvn package -D skipTests
-RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
+COPY gradle gradle
+COPY build.gradle.kts .
+COPY gradlew .
+COPY settings.gradle.kts .
+RUN --mount=type=cache,target=/root/.m2 ./gradlew build --no-daemon --console plain -x test
+RUN mkdir -p build/dependency && (cd build/dependency; jar -xf ../libs/*.jar)
 
-FROM adoptopenjdk/openjdk11-openj9:alpine
-VOLUME /tmp
-ARG DEPENDENCY=/workspace/app/target/dependency
+FROM azul/zulu-openjdk-alpine:19-jre-latest
+VOLUME /app
+ARG DEPENDENCY=/workspace/app/build/dependency
 COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
-ENTRYPOINT [ \
-    "java", \
-    "-Xshareclasses", \
-    "-Xquickstart", \
-    "-cp", \
-    "app:app/lib/*", \
-    "com.leijendary.spring.notificationtemplate.Application" \
-]
+ENV JAVA_TOOL_OPTIONS "-XX:MaxRAMPercentage=80.0"
+ENTRYPOINT ["java", "--enable-preview", "-cp", "app:app/lib/*", "com.leijendary.spring.template.notification.ApplicationKt"]
